force-app/main/default/objects/TargetAudience__c/TargetAudience__c.object-meta.xml
<CustomObject>
    <label>対象者</label>
    <nameField>
        <label>対象者名</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>対象者</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>