force-app/main/default/objects/TargetAudience__c/fields/AcquaintanceRoute__c.field-meta.xml
<CustomField>
    <fullName>AcquaintanceRoute__c</fullName>
    <label>知り合い経路</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ボードゲームイベント</fullName>
            </value>
            <value>
                <fullName>カレーパーティ</fullName>
            </value>
            <value>
                <fullName>カレー1on1</fullName>
            </value>
            <value>
                <fullName>SNS</fullName>
            </value>
            <value>
                <fullName>ジモティー</fullName>
            </value>
            <value>
                <fullName>声かけ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>