force-app/main/default/objects/TargetAudience__c/fields/ApprochTimes__c.field-meta.xml
<CustomField>
    <fullName>ApprochTimes__c</fullName>
    <defaultValue>0</defaultValue>
    <description>運ため等、BP用語を盛り込んで会った回数を記録するための項目</description>
    <label>アプローチ回数</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>