force-app/main/default/objects/TargetAudience__c/fields/CurryInterestingPerson__c.field-meta.xml
<CustomField>
    <fullName>CurryInterestingPerson__c</fullName>
    <defaultValue>false</defaultValue>
    <label>カレーに興味あるか</label>
    <type>Checkbox</type>
</CustomField>