force-app/main/default/objects/TargetAudience__c/fields/edgeAccuracy__c.field-meta.xml
<CustomField>
    <fullName>edgeAccuracy__c</fullName>
    <description>A-1回興味付けすれば入信する
B-あと3・4回興味付けすれば入信する
C-どっちに転ぶか分からない
D-入信までに数か月、数年くらいのスパンが必要
E-見込みなし</description>
    <label>入信確度</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>