force-app/main/default/objects/TargetAudience__c/fields/FirstConversationDate__c.field-meta.xml
<CustomField>
    <fullName>FirstConversationDate__c</fullName>
    <label>初回会話日</label>
    <type>Date</type>
</CustomField>