force-app/main/default/objects/TargetAudience__c/fields/Hobby__c.field-meta.xml
<CustomField>
    <fullName>Hobby__c</fullName>
    <description>趣味または相手の好きな者・今後やっていきたいことを入力する項目</description>
    <label>趣味</label>
    <type>TextArea</type>
</CustomField>