force-app/main/default/objects/TargetAudience__c/fields/initiatiedFlag__c.field-meta.xml
<CustomField>
    <fullName>initiatiedFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>入信済</label>
    <type>Checkbox</type>
</CustomField>