force-app/main/default/objects/TargetAudience__c/fields/LineInformation__c.field-meta.xml
<CustomField>
    <fullName>LineInformation__c</fullName>
    <description>LINEの名前またはIDを入れる項目</description>
    <label>LINE情報</label>
    <length>30</length>
    <type>Text</type>
</CustomField>