force-app/main/default/objects/TargetAudience__c/fields/LivingPlace__c.field-meta.xml
<CustomField>
    <fullName>LivingPlace__c</fullName>
    <description>県・市名の大まかな住所</description>
    <label>住んでる場所</label>
    <length>20</length>
    <type>Text</type>
</CustomField>