force-app/main/default/objects/TargetAudience__c/fields/Needs__c.field-meta.xml
<CustomField>
    <fullName>Needs__c</fullName>
    <label>悩み</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>