force-app/main/default/objects/TargetAudience__c/fields/NetWorkBusinessPerson__c.field-meta.xml
<CustomField>
    <fullName>NetWorkBusinessPerson__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ネットワークビジネス対象者</label>
    <type>Checkbox</type>
</CustomField>