force-app/main/default/objects/TargetAudience__c/fields/SnsType__c.field-meta.xml
<CustomField>
    <fullName>SnsType__c</fullName>
    <label>SNS種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>X</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>オープンチャット</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>