force-app/main/default/objects/TargetAudience__c/validationRules/NotEdit_FinishInitation.validationRule-meta.xml
<ValidationRule>
    <fullName>NotEdit_FinishInitation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(initiatiedFlag__c  = True
        ,NOT(ISCHANGED(initiatiedFlag__c)))</errorConditionFormula>
    <errorMessage>入信済の場合は対象者レコードを編集できません。
後輩レコードから編集してください</errorMessage>
</ValidationRule>